# door

./: .gitignore  .gitmodules  =  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  README.rst  pyproject.toml  setup.py
acmad/: door_downloader_acmad_cdi.json  door_downloader_acmad_cdi.py
chirps/: door_downloader_satellite_chirps.json  door_downloader_satellite_chirps.py
cmc/: door_downloader_nwp_cmc-gdps.py  door_downloader_nwp_cmc-gdps_example.json
data_sources/: __init__.py  door_downloader.py  downloader_http.py
door/: __init__.py  base_downloaders.py
dwd/: door_downloader_nwp_icon.py  door_downloader_nwp_icon_example.json
ecmwf/: door_downloader_ecmwf_opendata_single_hires.py  door_downloader_nwp_ecmwf_aifs_hires_single.json  door_downloader_nwp_ecmwf_hires_single.json  door_downloader_nwp_ecmwf_ifs_hires_single.json
era5/: door_downloader_reanalysis_era5_copernicus.py  door_downloader_reanalysis_era5_example.json
gefs/: door_downloader_nwp_gefs_nomads.py  door_downloader_nwp_gefs_nomads_example.json
gfs/: door_downloader_nwp_gfs_ftp.py  door_downloader_nwp_gfs_ftp_example.json  door_downloader_nwp_gfs_ftp_v2.json  door_downloader_nwp_gfs_historical.json  door_downloader_nwp_gfs_historical.py  door_downloader_nwp_gfs_historical2.json  door_downloader_nwp_gfs_historical_example.json  door_downloader_nwp_gfs_native.py  door_downloader_nwp_gfs_nomads.py  door_downloader_nwp_gfs_nomads_example.json  door_downloader_nwp_gfs_opendap.py  door_downloader_nwp_gfs_opendap_cw.json  door_downloader_nwp_gfs_opendap_example.json
gpm/: door_downloader_satellite_imerg.py
gsmap/: door_downloader_satellite_gsmap_gauge_historical.json  door_downloader_satellite_gsmap_gauge_historical.py  door_downloader_satellite_gsmap_obs.py  door_downloader_satellite_gsmap_obs_example.json  volta.json
imerg/: door_downloader_satellite_imerg.json  door_downloader_satellite_imerg.py  door_downloader_satellite_imerg_v06.py
lib/: basic.py  log.py
modis/: door_downloader_satellite_modis.py  door_downloader_satellite_modis.sh  door_downloader_satellite_modis_ET_example.json  (+7 more)
(+139 files in other folders)
